Fix: allow time to wrap

--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -302,7 +302,7 @@
     font-size: 13px;
     width: 100%;
     height: 100%;
-    white-space: pre;
+    white-space: pre-wrap;
 
     & > * {
       width: 100%;
